# 22

./: .dockerignore  .env.example  Dockerfile  activate.ps1  alembic.ini  check_postgres.py  docker-compose.yml  fix-database.ps1  pyproject.toml  requirements.txt  start_server.ps1  test_document.txt
alembic/: env.py
alembic/versions/: 0108b6eaf432_initial_migration.py  56bbe5b70fbe_initial_migration.py  6ae527c53f18_merge_heads.py  6bf9c05cee3d_add_authentication_and_documents.py  9283c8de598c_add_file_fields_to_document_and_search_.py  95786d196571_add_file_name_file_size_file_type_to_.py  add_file_fields.py
app/: main.py
app/api/: auth.py  deps.py  documents.py  frontend.py  recommendations.py  search.py  semantic_search.py  users.py  web_auth.py
app/core/: config.py  database.py  database_fixed.py  file_utils.py  security.py  sessions.py
app/crud/: __init__.py  document.py  user.py
app/middleware/: auth_middleware.py
app/models/: __init__.py  document.py  embedding.py  user.py
app/schemas/: __init__.py  document.py  user.py
app/services/: ai_service.py  embedding_service.py  text_extraction.py
app/templates/: base.html  documents.html  index.html  login.html  search.html  upload.html
data/indices/user_1/: index.faiss  mapping.json
data/indices/user_2/: index.faiss  mapping.json
scripts/: create_database.py  create_proper_env.py  fix_env.py  init_db.py  recreate_tables.py  setup_database.py  test_api.py  test_connection.py
uploads/1/: 43486129f742c76f_ПЗ-4.docx
